--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .popover-btn {
+    @apply bg-fb-popover active:bg-fb-active ml-2 flex h-[39px] w-[39px] cursor-pointer items-center justify-center rounded-full p-2.5;
+  }
+
+  .popover-panel {
+    @apply bg-fb-header border-fb-input absolute right-0 top-12 w-[300px] rounded-lg border p-4 shadow-lg lg:w-[360px];
+  }
+}
